# CRMQ

./: .gitmodules  CMakeLists.txt  README.md
experiments/: CMakeLists.txt  measure_bpe_lcp.cpp
include/: bp_utils.hpp  cbp.hpp  crmq.hpp  debug.hpp  huff_vector.hpp  huffman.hpp  huffman_coder.hpp  my_bp_support.hpp  pforvector.hpp  scst.hpp  sparse_table.hpp  union_find.hpp
include/sux/bits/: EliasFano.hpp  Rank.hpp  SelectZero.hpp
tests/: CMakeLists.txt  test_huff.cpp  test_rmq.cpp  test_scst.cpp  unit_test_rmq.cpp  unit_test_scst.cpp
